Add more recipes

--- a/recipes.html
+++ b/recipes.html
@@ -5,16 +5,16 @@
             leontrolski - Recipes
         </title>
         <style>
-            body {margin: 5% auto; background: #fff7f7; color: #444444; font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif; font-size: 16px; line-height: 1.8; max-width: 63%;}
+            body{margin: 5% auto; background: #fff7f7; color: #444444; font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif; font-size: 16px; line-height: 1.8; max-width: 63%;}
             @media screen and (max-width: 800px) {body {font-size: 14px; line-height: 1.4; max-width: 90%;}}
-            pre {width: 100%; border-top: 3px solid gray; border-bottom: 3px solid gray;}
-            a {border-bottom: 1px solid #444444; color: #444444; text-decoration: none; text-shadow: 0 1px 0 #ffffff; }
-            a:hover {border-bottom: 0;}
+            pre{width: 100%; border-top: 3px solid gray; border-bottom: 3px solid gray;}
+            a{border-bottom: 1px solid #444444; color: #444444; text-decoration: none; text-shadow: 0 1px 0 #ffffff; }
+            a:hover{border-bottom: 0;}
             ul{padding-left: 1rem;}
-            blockquote {font-style: italic;color:black;background-color:#f2f2f2;padding:2em;}
-            details {border-bottom:solid 5px gray;}
-            .thumb {width:4rem; display:block;}
-            .recipe {width:100%;}
+            blockquote{font-style: italic;color:black;background-color:#f2f2f2;padding:2em;}
+            details{border-bottom:solid 5px gray;}
+            .thumb{width:4rem; display:block;}
+            .recipe{width: 100%;max-height: 35rem;height:auto;object-fit:contain;}
             table{border-collapse:collapse;}
             tr{border:solid 1px gray;}
             td{padding:0.5rem;}
@@ -30,7 +30,7 @@
             Recipes for laid-back engineers
         </h1>
         <p><em><a href="#about">About</a></em></p>
-        <table>
+        <table id="top">
             <tr><td><a href="#01">Santorini Tomato Keftes</a></td><td><img class="thumb" src="images/recipes/01-fritters-thumb.webp"></td></tr>
             <tr><td><a href="#02">Greek Spinach Risotto</a></td><td><img class="thumb" src="images/recipes/02-risotto-thumb.webp"></td></tr>
             <tr><td><a href="#03">Mexican Lentils</a></td><td><img class="thumb" src="images/recipes/03-lentils-thumb.webp"></td></tr>
@@ -41,19 +41,25 @@
             <tr><td><a href="#08">Spinach Cannelloni</a></td><td><img class="thumb" src="images/recipes/08-cannelloni-thumb.webp"></td></tr>
             <tr><td><a href="#09">Dumpling Stew</a></td><td><img class="thumb" src="images/recipes/09-dumpling-stew-thumb.webp"></td></tr>
             <tr><td><a href="#10">Cashew Paneer Curry</a></td><td><img class="thumb" src="images/recipes/10-cashew-paneer-thumb.webp"></td></tr>
+            <tr><td><a href="#11">Sweet Tatty Cakes</a></td><td><img class="thumb" src="images/recipes/11-tatty-cakes-thumb.webp"></td></tr>
+            <tr><td><a href="#12">Full Veg Tart</a></td><td><img class="thumb" src="images/recipes/12-full-tart-thumb.webp"></td></tr>
+            <tr><td><a href="#13">Veg Paella</a></td><td><img class="thumb" src="images/recipes/13-paella-thumb.webp"></td></tr>
         </table>
         <hr>
-        <p id="01"><img class="recipe" src="images/recipes/01-fritters.webp"></p><hr>
-        <p id="02"><img class="recipe" src="images/recipes/02-risotto.webp"></p><hr>
-        <p id="03"><img class="recipe" src="images/recipes/03-lentils.webp"></p><hr>
-        <p id="04"><img class="recipe" src="images/recipes/04-pasta.webp"></p><hr>
-        <p id="05"><img class="recipe" src="images/recipes/05-cashew.webp"></p><hr>
-        <p id="06"><img class="recipe" src="images/recipes/06-cauli-ench.webp"></p><hr>
-        <p id="07"><img class="recipe" src="images/recipes/07-pad-thai.webp"></p><hr>
+        <p id="01"><img class="recipe" src="images/recipes/01-fritters.webp"><a href="#top">top</a></p><hr>
+        <p id="02"><img class="recipe" src="images/recipes/02-risotto.webp"><a href="#top">top</a></p><hr>
+        <p id="03"><img class="recipe" src="images/recipes/03-lentils.webp"><a href="#top">top</a></p><hr>
+        <p id="04"><img class="recipe" src="images/recipes/04-pasta.webp"><a href="#top">top</a></p><hr>
+        <p id="05"><img class="recipe" src="images/recipes/05-cashew.webp"><a href="#top">top</a></p><hr>
+        <p id="06"><img class="recipe" src="images/recipes/06-cauli-ench.webp"><a href="#top">top</a></p><hr>
+        <p id="07"><img class="recipe" src="images/recipes/07-pad-thai.webp"><a href="#top">top</a></p><hr>
         <p id="08">Double everything</p>
-        <p><img class="recipe" src="images/recipes/08-cannelloni.webp"></p><hr>
-        <p id="09"><img class="recipe" src="images/recipes/09-dumpling-stew.webp"></p><hr>
-        <p id="10"><img class="recipe" src="images/recipes/10-cashew-paneer.webp"></p><hr>
+        <p><img class="recipe" src="images/recipes/08-cannelloni.webp"><a href="#top">top</a></p><hr>
+        <p id="09"><img class="recipe" src="images/recipes/09-dumpling-stew.webp"><a href="#top">top</a></p><hr>
+        <p id="10"><img class="recipe" src="images/recipes/10-cashew-paneer.webp"><a href="#top">top</a></p><hr>
+        <p id="11"><img class="recipe" src="images/recipes/11-tatty-cakes.webp"><a href="#top">top</a></p><hr>
+        <p id="12"><img class="recipe" src="images/recipes/12-full-tart.webp"><a href="#top">top</a></p><hr>
+        <p id="13"><img class="recipe" src="images/recipes/13-paella.webp"><a href="#top">top</a></p><hr>
         <br>
         <ul id="about">
             <li>For "laid-back engineers" in the sense that everything is schematic but approximate.</li>
@@ -66,6 +72,7 @@
                     <li><code>VLi15</code> = <a href="https://www.amazon.co.uk/Veggie-Lean-15-15-minute-Workouts/dp/1509856153">Joe Wicks: Veggie Lean in 15</a></li>
                     <li><code>JO</code> = <a href="https://www.jamieoliver.com/recipes/all/">Jamie Oliver</a></li>
                     <li><code>LHOPV</code> = <a href="https://www.amazon.co.uk/Happy-Leons-Leon-One-pot-Vegetarian/dp/1840918039">Leon Happy One Pot Vegetarian</a></li>
+                    <li><code>Pl</code> = <a href="https://www.amazon.co.uk/Plenty-Yotam-Ottolenghi/dp/0091933684">Yotam Ottolenghi - Plenty</a></li>
                 </ul>
             </li>
             <li>Ingredients are vaguely grouped by aisle.</li>
