--- a/recipes.html
+++ b/recipes.html
@@ -14,6 +14,7 @@
             blockquote{font-style: italic;color:black;background-color:#f2f2f2;padding:2em;}
             details{border-bottom:solid 5px gray;}
             .thumb{width:4rem; display:block;}
+            .thumb:hover {transform: scale(3) translateX(1rem);box-shadow:0px 0px 5px 2px #0000005e;}
             .recipe{width: 100%;max-height: 35rem;height:auto;object-fit:contain;}
             table{border-collapse:collapse;}
             tr{border:solid 1px gray;}
@@ -34,9 +35,9 @@
             <tr><td><a href="#01">Santorini Tomato Keftes</a></td><td><img class="thumb" src="images/recipes/01-fritters-thumb.webp"></td></tr>
             <tr><td><a href="#02">Greek Spinach Risotto</a></td><td><img class="thumb" src="images/recipes/02-risotto-thumb.webp"></td></tr>
             <tr><td><a href="#03">Mexican Lentils</a></td><td><img class="thumb" src="images/recipes/03-lentils-thumb.webp"></td></tr>
-            <tr><td><a href="#04">Pasta e Fagiolli</a></td></tr>
+            <tr><td><a href="#04">Pasta e Fagiolli</a></td><td></td></tr>
             <tr><td><a href="#05">Cashew Curry</a></td><td><img class="thumb" src="images/recipes/05-cashew-thumb.webp"></td></tr>
-            <tr><td><a href="#06">Cauliflower Enchiladas</a></td></tr>
+            <tr><td><a href="#06">Cauliflower Enchiladas</a></td><td></td></tr>
             <tr><td><a href="#07">Pack Choi Pad Thai</a></td><td><img class="thumb" src="images/recipes/07-pad-thai-thumb.webp"></td></tr>
             <tr><td><a href="#08">Spinach Cannelloni</a></td><td><img class="thumb" src="images/recipes/08-cannelloni-thumb.webp"></td></tr>
             <tr><td><a href="#09">Dumpling Stew</a></td><td><img class="thumb" src="images/recipes/09-dumpling-stew-thumb.webp"></td></tr>
@@ -44,6 +45,9 @@
             <tr><td><a href="#11">Sweet Tatty Cakes</a></td><td><img class="thumb" src="images/recipes/11-tatty-cakes-thumb.webp"></td></tr>
             <tr><td><a href="#12">Full Veg Tart</a></td><td><img class="thumb" src="images/recipes/12-full-tart-thumb.webp"></td></tr>
             <tr><td><a href="#13">Veg Paella</a></td><td><img class="thumb" src="images/recipes/13-paella-thumb.webp"></td></tr>
+            <tr><td><a href="#14">Gochujang Gnocchi</a></td><td><img class="thumb" src="images/recipes/14-gnocci-gochujang-thumb.webp"></td></tr>
+            <tr><td><a href="#15">Tofu Schnitzel</a></td><td><img class="thumb" src="images/recipes/15-schnitzel-thumb.webp"></td></tr>
+            <tr><td><a href="#16">Aubergine Parmigiana</a></td><td><img class="thumb" src="images/recipes/16-aub-parm-thumb.webp"></td></tr>
         </table>
         <hr>
         <p id="01"><img class="recipe" src="images/recipes/01-fritters.webp"><a href="#top">top</a></p><hr>
@@ -60,6 +64,9 @@
         <p id="11"><img class="recipe" src="images/recipes/11-tatty-cakes.webp"><a href="#top">top</a></p><hr>
         <p id="12"><img class="recipe" src="images/recipes/12-full-tart.webp"><a href="#top">top</a></p><hr>
         <p id="13"><img class="recipe" src="images/recipes/13-paella.webp"><a href="#top">top</a></p><hr>
+        <p id="14"><img class="recipe" src="images/recipes/14-gnocci-gochujang.webp"><a href="#top">top</a></p><hr>
+        <p id="15"><img class="recipe" src="images/recipes/15-schnitzel.webp"><a href="#top">top</a></p><hr>
+        <p id="16"><img class="recipe" src="images/recipes/16-aub-parm.webp"><a href="#top">top</a></p><hr>
         <br>
         <ul id="about">
             <li>For "laid-back engineers" in the sense that everything is schematic but approximate.</li>
